@@ -5,6 +5,7 @@
 Version 1.4.14 - SVN
 --------------------
   - Added support for Macedonian.
+  - Don't allow invalid plugin names in conf.pl --install-plugin
 
 Version 1.4.13 - 14 December 2007
 ---------------------------------
